parser.output
Terminals unused in grammar

   _IMAGINARY


State 11 conflicts: 3 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 4 shift/reduce
State 21 conflicts: 4 shift/reduce
State 65 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 73 conflicts: 2 shift/reduce
State 74 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 83 conflicts: 2 shift/reduce
State 84 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 287 conflicts: 1 shift/reduce
State 349 conflicts: 1 shift/reduce
State 371 conflicts: 1 shift/reduce
State 446 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 declaration: declaration_specifiers initialized_declarator_list ';'

    2 declaration_specifiers: storage_class_specifier
    3                       | storage_class_specifier declaration_specifiers
    4                       | type_specifier
    5                       | type_specifier declaration_specifiers
    6                       | type_qualifier
    7                       | type_qualifier declaration_specifiers
    8                       | function_specifier
    9                       | function_specifier declaration_specifiers

   10 function_specifier: INLINE

   11 initialized_declarator_list: initialized_declarator
   12                            | initialized_declarator_list ',' initialized_declarator

   13 initialized_declarator: declarator
   14                       | declarator '=' initializer

   15 storage_class_specifier: AUTO
   16                        | EXTERN
   17                        | REGISTER
   18                        | STATIC
   19                        | TYPEDEF

   20 type_specifier: enumeration_type_specifier
   21               | floating_point_specifier
   22               | integer_type_specifier
   23               | structure_type_specifier
   24               | typedef_name
   25               | union_type_specifier
   26               | void_type_specifier

   27 type_qualifier: CONST
   28               | VOLATILE
   29               | RESTRICT

   30 declarator: pointer_declarator
   31           | direct_declarator

   32 direct_declarator: simple_declarator
   33                  | '(' declarator ')'
   34                  | function_declarator
   35                  | array_declarator

   36 simple_declarator: IDENT

   37 pointer_declarator: pointer direct_declarator

   38 type_qualifier_list: type_qualifier
   39                    | type_qualifier_list type_qualifier

   40 array_declarator: direct_declarator '[' ']'
   41                 | direct_declarator '[' constant_expression ']'
   42                 | direct_declarator '[' array_qualifier_list ']'
   43                 | direct_declarator '[' array_size_expression ']'
   44                 | direct_declarator '[' array_qualifier_list array_size_expression ']'
   45                 | direct_declarator '[' array_qualifier_list '*' ']'

   46 array_qualifier_list: array_qualifier
   47                     | array_qualifier_list array_qualifier

   48 array_qualifier: STATIC
   49                | RESTRICT
   50                | CONST
   51                | VOLATILE

   52 array_size_expression: assignment_expression
   53                      | '*'

   54 initializer: assignment_expression
   55            | '{' initializer_list '}'
   56            | '{' initializer_list ',' '}'

   57 initializer_list: initializer
   58                 | initializer_list ',' initializer
   59                 | designation initializer
   60                 | initializer_list ',' designation initializer

   61 designation: designator_list '='

   62 designator_list: designator
   63                | designator_list designator

   64 designator: '[' constant_expression ']'
   65           | '.' IDENT

   66 integer_type_specifier: signed_type_specifier
   67                       | unsigned_type_specifier
   68                       | character_type_specifier
   69                       | bool_type_specifier

   70 signed_type_specifier: SHORT
   71                      | SHORT INT
   72                      | SIGNED SHORT
   73                      | SIGNED SHORT INT
   74                      | INT
   75                      | SIGNED INT
   76                      | SIGNED
   77                      | LONG
   78                      | LONG INT
   79                      | SIGNED LONG
   80                      | SIGNED LONG INT
   81                      | LONG LONG
   82                      | LONG LONG INT
   83                      | SIGNED LONG LONG
   84                      | SIGNED LONG LONG INT

   85 unsigned_type_specifier: UNSIGNED SHORT
   86                        | UNSIGNED SHORT INT
   87                        | UNSIGNED
   88                        | UNSIGNED INT
   89                        | UNSIGNED LONG
   90                        | UNSIGNED LONG INT
   91                        | UNSIGNED LONG LONG
   92                        | UNSIGNED LONG LONG INT

   93 character_type_specifier: CHAR
   94                         | SIGNED CHAR
   95                         | UNSIGNED CHAR

   96 floating_point_specifier: FLOAT
   97                         | DOUBLE
   98                         | LONG DOUBLE
   99                         | complex_type_specifier

  100 complex_type_specifier: FLOAT _COMPLEX
  101                       | DOUBLE _COMPLEX
  102                       | LONG DOUBLE _COMPLEX

  103 bool_type_specifier: _BOOL

  104 enumeration_type_specifier: enumeration_type_definition
  105                           | enumeration_type_reference

  106 enumeration_type_definition: ENUM '{' enumeration_definition_list '}'
  107                            | ENUM enumeration_tag '{' enumeration_definition_list '}'
  108                            | ENUM '{' enumeration_definition_list ',' '}'
  109                            | ENUM enumeration_tag '{' enumeration_definition_list ',' '}'

  110 enumeration_type_reference: ENUM enumeration_tag

  111 enumeration_tag: IDENT

  112 enumeration_definition_list: enumeration_constant_definition
  113                            | enumeration_definition_list ',' enumeration_constant_definition

  114 enumeration_constant_definition: enumeration_constant
  115                                | enumeration_constant '=' expression

  116 enumeration_constant: IDENT

  117 structure_type_specifier: structure_type_definition
  118                         | structure_type_reference

  119 structure_type_definition: STRUCT '{' field_list '}'
  120                          | STRUCT structure_tag '{' field_list '}'

  121 structure_type_reference: STRUCT structure_tag

  122 structure_tag: IDENT

  123 field_list: component_declaration
  124           | field_list component_declaration

  125 component_declaration: type_specifier component_declaration_list ';'

  126 component_declaration_list: component_declarator
  127                           | component_declaration_list ',' component_declarator

  128 component_declarator: simple_component
  129                     | bit_field

  130 simple_component: declarator

  131 bit_field: ':' width
  132          | declarator ':' width

  133 width: constant_expression

  134 union_type_specifier: union_type_definition
  135                     | union_type_reference

  136 union_type_definition: UNION '{' field_list '}'
  137                      | UNION union_tag '{' field_list '}'

  138 union_type_reference: UNION union_tag

  139 union_tag: IDENT

  140 void_type_specifier: VOID

  141 typedef_name: TYPEDEF_NAME

  142 type_name: declaration_specifiers
  143          | declaration_specifiers abstract_declarator

  144 abstract_declarator: pointer
  145                    | direct_abstract_declarator
  146                    | pointer direct_abstract_declarator

  147 pointer: '*'
  148        | '*' type_qualifier_list
  149        | '*' type_qualifier_list pointer
  150        | '*' pointer

  151 direct_abstract_declarator: '(' abstract_declarator ')'
  152                           | '[' ']'
  153                           | direct_abstract_declarator '[' ']'
  154                           | direct_abstract_declarator '[' constant_expression ']'
  155                           | '[' constant_expression ']'
  156                           | '[' expression ']'
  157                           | direct_abstract_declarator '[' expression ']'
  158                           | '[' '*' ']'
  159                           | direct_abstract_declarator '[' '*' ']'
  160                           | '(' ')'
  161                           | direct_abstract_declarator '(' ')'
  162                           | direct_abstract_declarator '(' parameter_type_list ')'
  163                           | '(' parameter_type_list ')'

  164 primary_expression: IDENT
  165                   | NUMBER
  166                   | CHARLIT
  167                   | STRING
  168                   | parenthesized_expression

  169 parenthesized_expression: '(' expression ')'

  170 postfix_expression: primary_expression
  171                   | subscript_expression
  172                   | component_selection_expression
  173                   | function_call
  174                   | postincrement_expression
  175                   | postdecrement_expression
  176                   | compound_literal

  177 subscript_expression: postfix_expression '[' expression ']'

  178 component_selection_expression: direct_component_selection
  179                               | indirect_component_selection

  180 direct_component_selection: postfix_expression '.' IDENT

  181 indirect_component_selection: postfix_expression INDSEL IDENT

  182 function_call: postfix_expression '(' ')'
  183              | postfix_expression '(' expression_list ')'

  184 expression_list: assignment_expression
  185                | expression_list ',' assignment_expression

  186 postincrement_expression: postfix_expression PLUSPLUS

  187 postdecrement_expression: postfix_expression MINUSMINUS

  188 compound_literal: '(' type_name ')' '{' initializer_list '}'
  189                 | '(' type_name ')' '{' initializer_list ',' '}'

  190 cast_expression: unary_expression
  191                | '(' type_name ')' cast_expression

  192 unary_expression: postfix_expression
  193                 | sizeof_expression
  194                 | unary_minus_expression
  195                 | unary_plus_expression
  196                 | logical_negation_expression
  197                 | bitwise_negation_expression
  198                 | address_expression
  199                 | indirection_expression
  200                 | preincrement_expression
  201                 | predecrement_expression

  202 sizeof_expression: SIZEOF '(' type_name ')'
  203                  | SIZEOF unary_expression

  204 unary_minus_expression: '-' cast_expression

  205 unary_plus_expression: '+' cast_expression

  206 logical_negation_expression: '!' cast_expression

  207 bitwise_negation_expression: '~' cast_expression

  208 address_expression: '&' cast_expression

  209 indirection_expression: '*' cast_expression

  210 preincrement_expression: PLUSPLUS unary_expression

  211 predecrement_expression: MINUSMINUS unary_expression

  212 multiplicative_expression: cast_expression
  213                          | multiplicative_expression '*' cast_expression
  214                          | multiplicative_expression '/' cast_expression
  215                          | multiplicative_expression '%' cast_expression

  216 additive_expression: multiplicative_expression
  217                    | additive_expression '+' multiplicative_expression
  218                    | additive_expression '-' multiplicative_expression

  219 shift_expression: additive_expression
  220                 | shift_expression SHL additive_expression
  221                 | shift_expression SHR additive_expression

  222 relational_expression: shift_expression
  223                      | relational_expression '<' shift_expression
  224                      | relational_expression '>' shift_expression
  225                      | relational_expression LTEQ shift_expression
  226                      | relational_expression GTEQ shift_expression

  227 equality_expression: relational_expression
  228                    | equality_expression EQEQ relational_expression
  229                    | equality_expression NOTEQ relational_expression

  230 and_expression: equality_expression
  231               | and_expression '&' equality_expression

  232 exclusive_or_expression: and_expression
  233                        | exclusive_or_expression '^' and_expression

  234 inclusive_or_expression: exclusive_or_expression
  235                        | inclusive_or_expression '|' exclusive_or_expression

  236 logical_and_expression: inclusive_or_expression
  237                       | logical_and_expression LOGAND inclusive_or_expression

  238 logical_or_expression: logical_and_expression
  239                      | logical_or_expression LOGOR logical_and_expression

  240 conditional_expression: logical_or_expression
  241                       | logical_or_expression '?' expression ':' conditional_expression

  242 constant_expression: conditional_expression

  243 assignment_expression: constant_expression
  244                      | unary_expression assignment_operator assignment_expression

  245 assignment_operator: '='
  246                    | TIMESEQ
  247                    | DIVEQ
  248                    | MODEQ
  249                    | PLUSEQ
  250                    | MINUSEQ
  251                    | SHLEQ
  252                    | SHREQ
  253                    | ANDEQ
  254                    | OREQ
  255                    | XOREQ

  256 expression: assignment_expression
  257           | expression ',' assignment_expression

  258 statement: expression_statement
  259          | labeled_statement
  260          | compound_statement
  261          | conditional_statement
  262          | iterative_statement
  263          | switch_statement
  264          | break_statement
  265          | continue_statement
  266          | return_statement
  267          | goto_statement
  268          | null_statement

  269 expression_statement: expression ';'

  270 labeled_statement: label ':' statement

  271 label: named_label
  272      | case_label
  273      | default_label

  274 compound_statement: '{' '}'
  275                   | '{' declaration_or_statement_list '}'

  276 declaration_or_statement_list: declaration_or_statement
  277                              | declaration_or_statement_list declaration_or_statement

  278 declaration_or_statement: declaration
  279                         | statement

  280 conditional_statement: if_statement
  281                      | if_else_statement

  282 if_statement: IF '(' expression ')'

  283 if_else_statement: IF '(' expression ')' ELSE statement

  284 iterative_statement: do_statement
  285                    | while_statement
  286                    | for_statement

  287 do_statement: DO statement WHILE '(' expression ')' ';'

  288 while_statement: WHILE '(' expression ')' statement

  289 for_statement: FOR for_expressions statement

  290 for_expressions: '(' ';' ';' ')'
  291                | '(' initial_clause ';' ';' ')'
  292                | '(' ';' expression ';' ')'
  293                | '(' ';' ';' expression ')'
  294                | '(' initial_clause ';' expression ';' ')'
  295                | '(' ';' expression ';' expression ')'
  296                | '(' initial_clause ';' expression ';' expression ')'

  297 initial_clause: expression
  298               | declaration

  299 switch_statement: SWITCH '(' expression ')' statement

  300 case_label: CASE constant_expression

  301 default_label: DEFAULT

  302 break_statement: BREAK ';'

  303 continue_statement: CONTINUE ';'

  304 return_statement: RETURN ';'
  305                 | RETURN expression ';'

  306 goto_statement: GOTO named_label ';'

  307 named_label: IDENT

  308 null_statement: ';'

  309 translation_unit: top_level_declaration
  310                 | translation_unit top_level_declaration

  311 top_level_declaration: declaration
  312                      | function_definition

  313 function_definition: function_def_specifier compound_statement

  314 function_def_specifier: declarator
  315                       | declaration_specifiers declarator
  316                       | declarator declaration_list
  317                       | declaration_specifiers declarator declaration_specifiers

  318 declaration_list: declaration
  319                 | declaration_list declaration

  320 function_declarator: direct_declarator '(' parameter_type_list ')'
  321                    | direct_declarator '(' ')'
  322                    | direct_declarator '(' identifier_list ')'

  323 parameter_type_list: parameter_list
  324                    | parameter_list ',' ELLIPSIS

  325 parameter_list: parameter_declaration
  326               | parameter_list ',' parameter_declaration

  327 parameter_declaration: declaration_specifiers declarator
  328                      | declaration_specifiers
  329                      | declaration_specifiers abstract_declarator

  330 identifier_list: IDENT
  331                | identifier_list ',' IDENT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 206
'%' (37) 215
'&' (38) 208 231
'(' (40) 33 151 160 161 162 163 169 182 183 188 189 191 202 282 283
    287 288 290 291 292 293 294 295 296 299 320 321 322
')' (41) 33 151 160 161 162 163 169 182 183 188 189 191 202 282 283
    287 288 290 291 292 293 294 295 296 299 320 321 322
'*' (42) 45 53 147 148 149 150 158 159 209 213
'+' (43) 205 217
',' (44) 12 56 58 60 108 109 113 127 185 189 257 324 326 331
'-' (45) 204 218
'.' (46) 65 180
'/' (47) 214
':' (58) 131 132 241 270
';' (59) 1 125 269 287 290 291 292 293 294 295 296 302 303 304 305
    306 308
'<' (60) 223
'=' (61) 14 61 115 245
'>' (62) 224
'?' (63) 241
'[' (91) 40 41 42 43 44 45 64 152 153 154 155 156 157 158 159 177
']' (93) 40 41 42 43 44 45 64 152 153 154 155 156 157 158 159 177
'^' (94) 233
'{' (123) 55 56 106 107 108 109 119 120 136 137 188 189 274 275
'|' (124) 235
'}' (125) 55 56 106 107 108 109 119 120 136 137 188 189 274 275
'~' (126) 207
error (256)
IDENT (258) 36 65 111 116 122 139 164 180 181 307 330 331
CHARLIT (259) 166
STRING (260) 167
NUMBER (261) 165
INDSEL (262) 181
PLUSPLUS (263) 186 210
MINUSMINUS (264) 187 211
SHL (265) 220
SHR (266) 221
LTEQ (267) 225
GTEQ (268) 226
EQEQ (269) 228
NOTEQ (270) 229
LOGAND (271) 237
LOGOR (272) 239
ELLIPSIS (273) 324
TIMESEQ (274) 246
DIVEQ (275) 247
MODEQ (276) 248
PLUSEQ (277) 249
MINUSEQ (278) 250
SHLEQ (279) 251
SHREQ (280) 252
ANDEQ (281) 253
OREQ (282) 254
XOREQ (283) 255
AUTO (284) 15
BREAK (285) 302
CASE (286) 300
CHAR (287) 93 94 95
CONST (288) 27 50
CONTINUE (289) 303
DEFAULT (290) 301
DO (291) 287
DOUBLE (292) 97 98 101 102
ELSE (293) 283
ENUM (294) 106 107 108 109 110
EXTERN (295) 16
FLOAT (296) 96 100
FOR (297) 289
GOTO (298) 306
IF (299) 282 283
INLINE (300) 10
INT (301) 71 73 74 75 78 80 82 84 86 88 90 92
LONG (302) 77 78 79 80 81 82 83 84 89 90 91 92 98 102
REGISTER (303) 17
RESTRICT (304) 29 49
RETURN (305) 304 305
SHORT (306) 70 71 72 73 85 86
SIGNED (307) 72 73 75 76 79 80 83 84 94
SIZEOF (308) 202 203
STATIC (309) 18 48
STRUCT (310) 119 120 121
SWITCH (311) 299
TYPEDEF (312) 19
TYPEDEF_NAME (313) 141
UNION (314) 136 137 138
UNSIGNED (315) 85 86 87 88 89 90 91 92 95
VOID (316) 140
VOLATILE (317) 28 51
WHILE (318) 287 288
_BOOL (319) 103
_COMPLEX (320) 100 101 102
_IMAGINARY (321)


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
declaration (92)
    on left: 1, on right: 278 298 311 318 319
declaration_specifiers (93)
    on left: 2 3 4 5 6 7 8 9, on right: 1 3 5 7 9 142 143 315 317 327
    328 329
function_specifier (94)
    on left: 10, on right: 8 9
initialized_declarator_list (95)
    on left: 11 12, on right: 1 12
initialized_declarator (96)
    on left: 13 14, on right: 11 12
storage_class_specifier (97)
    on left: 15 16 17 18 19, on right: 2 3
type_specifier (98)
    on left: 20 21 22 23 24 25 26, on right: 4 5 125
type_qualifier (99)
    on left: 27 28 29, on right: 6 7 38 39
declarator (100)
    on left: 30 31, on right: 13 14 33 130 132 314 315 316 317 327
direct_declarator (101)
    on left: 32 33 34 35, on right: 31 37 40 41 42 43 44 45 320 321
    322
simple_declarator (102)
    on left: 36, on right: 32
pointer_declarator (103)
    on left: 37, on right: 30
type_qualifier_list (104)
    on left: 38 39, on right: 39 148 149
array_declarator (105)
    on left: 40 41 42 43 44 45, on right: 35
array_qualifier_list (106)
    on left: 46 47, on right: 42 44 45 47
array_qualifier (107)
    on left: 48 49 50 51, on right: 46 47
array_size_expression (108)
    on left: 52 53, on right: 43 44
initializer (109)
    on left: 54 55 56, on right: 14 57 58 59 60
initializer_list (110)
    on left: 57 58 59 60, on right: 55 56 58 60 188 189
designation (111)
    on left: 61, on right: 59 60
designator_list (112)
    on left: 62 63, on right: 61 63
designator (113)
    on left: 64 65, on right: 62 63
integer_type_specifier (114)
    on left: 66 67 68 69, on right: 22
signed_type_specifier (115)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84, on right:
    66
unsigned_type_specifier (116)
    on left: 85 86 87 88 89 90 91 92, on right: 67
character_type_specifier (117)
    on left: 93 94 95, on right: 68
floating_point_specifier (118)
    on left: 96 97 98 99, on right: 21
complex_type_specifier (119)
    on left: 100 101 102, on right: 99
bool_type_specifier (120)
    on left: 103, on right: 69
enumeration_type_specifier (121)
    on left: 104 105, on right: 20
enumeration_type_definition (122)
    on left: 106 107 108 109, on right: 104
enumeration_type_reference (123)
    on left: 110, on right: 105
enumeration_tag (124)
    on left: 111, on right: 107 109 110
enumeration_definition_list (125)
    on left: 112 113, on right: 106 107 108 109 113
enumeration_constant_definition (126)
    on left: 114 115, on right: 112 113
enumeration_constant (127)
    on left: 116, on right: 114 115
structure_type_specifier (128)
    on left: 117 118, on right: 23
structure_type_definition (129)
    on left: 119 120, on right: 117
structure_type_reference (130)
    on left: 121, on right: 118
structure_tag (131)
    on left: 122, on right: 120 121
field_list (132)
    on left: 123 124, on right: 119 120 124 136 137
component_declaration (133)
    on left: 125, on right: 123 124
component_declaration_list (134)
    on left: 126 127, on right: 125 127
component_declarator (135)
    on left: 128 129, on right: 126 127
simple_component (136)
    on left: 130, on right: 128
bit_field (137)
    on left: 131 132, on right: 129
width (138)
    on left: 133, on right: 131 132
union_type_specifier (139)
    on left: 134 135, on right: 25
union_type_definition (140)
    on left: 136 137, on right: 134
union_type_reference (141)
    on left: 138, on right: 135
union_tag (142)
    on left: 139, on right: 137 138
void_type_specifier (143)
    on left: 140, on right: 26
typedef_name (144)
    on left: 141, on right: 24
type_name (145)
    on left: 142 143, on right: 188 189 191 202
abstract_declarator (146)
    on left: 144 145 146, on right: 143 151 329
pointer (147)
    on left: 147 148 149 150, on right: 37 144 146 149 150
direct_abstract_declarator (148)
    on left: 151 152 153 154 155 156 157 158 159 160 161 162 163, on right:
    145 146 153 154 157 159 161 162
primary_expression (149)
    on left: 164 165 166 167 168, on right: 170
parenthesized_expression (150)
    on left: 169, on right: 168
postfix_expression (151)
    on left: 170 171 172 173 174 175 176, on right: 177 180 181 182
    183 186 187 192
subscript_expression (152)
    on left: 177, on right: 171
component_selection_expression (153)
    on left: 178 179, on right: 172
direct_component_selection (154)
    on left: 180, on right: 178
indirect_component_selection (155)
    on left: 181, on right: 179
function_call (156)
    on left: 182 183, on right: 173
expression_list (157)
    on left: 184 185, on right: 183 185
postincrement_expression (158)
    on left: 186, on right: 174
postdecrement_expression (159)
    on left: 187, on right: 175
compound_literal (160)
    on left: 188 189, on right: 176
cast_expression (161)
    on left: 190 191, on right: 191 204 205 206 207 208 209 212 213
    214 215
unary_expression (162)
    on left: 192 193 194 195 196 197 198 199 200 201, on right: 190
    203 210 211 244
sizeof_expression (163)
    on left: 202 203, on right: 193
unary_minus_expression (164)
    on left: 204, on right: 194
unary_plus_expression (165)
    on left: 205, on right: 195
logical_negation_expression (166)
    on left: 206, on right: 196
bitwise_negation_expression (167)
    on left: 207, on right: 197
address_expression (168)
    on left: 208, on right: 198
indirection_expression (169)
    on left: 209, on right: 199
preincrement_expression (170)
    on left: 210, on right: 200
predecrement_expression (171)
    on left: 211, on right: 201
multiplicative_expression (172)
    on left: 212 213 214 215, on right: 213 214 215 216 217 218
additive_expression (173)
    on left: 216 217 218, on right: 217 218 219 220 221
shift_expression (174)
    on left: 219 220 221, on right: 220 221 222 223 224 225 226
relational_expression (175)
    on left: 222 223 224 225 226, on right: 223 224 225 226 227 228
    229
equality_expression (176)
    on left: 227 228 229, on right: 228 229 230 231
and_expression (177)
    on left: 230 231, on right: 231 232 233
exclusive_or_expression (178)
    on left: 232 233, on right: 233 234 235
inclusive_or_expression (179)
    on left: 234 235, on right: 235 236 237
logical_and_expression (180)
    on left: 236 237, on right: 237 238 239
logical_or_expression (181)
    on left: 238 239, on right: 239 240 241
conditional_expression (182)
    on left: 240 241, on right: 241 242
constant_expression (183)
    on left: 242, on right: 41 64 133 154 155 243 300
assignment_expression (184)
    on left: 243 244, on right: 52 54 184 185 244 256 257
assignment_operator (185)
    on left: 245 246 247 248 249 250 251 252 253 254 255, on right:
    244
expression (186)
    on left: 256 257, on right: 115 156 157 169 177 241 257 269 282
    283 287 288 292 293 294 295 296 297 299 305
statement (187)
    on left: 258 259 260 261 262 263 264 265 266 267 268, on right:
    270 279 283 287 288 289 299
expression_statement (188)
    on left: 269, on right: 258
labeled_statement (189)
    on left: 270, on right: 259
label (190)
    on left: 271 272 273, on right: 270
compound_statement (191)
    on left: 274 275, on right: 260 313
declaration_or_statement_list (192)
    on left: 276 277, on right: 275 277
declaration_or_statement (193)
    on left: 278 279, on right: 276 277
conditional_statement (194)
    on left: 280 281, on right: 261
if_statement (195)
    on left: 282, on right: 280
if_else_statement (196)
    on left: 283, on right: 281
iterative_statement (197)
    on left: 284 285 286, on right: 262
do_statement (198)
    on left: 287, on right: 284
while_statement (199)
    on left: 288, on right: 285
for_statement (200)
    on left: 289, on right: 286
for_expressions (201)
    on left: 290 291 292 293 294 295 296, on right: 289
initial_clause (202)
    on left: 297 298, on right: 291 294 296
switch_statement (203)
    on left: 299, on right: 263
case_label (204)
    on left: 300, on right: 272
default_label (205)
    on left: 301, on right: 273
break_statement (206)
    on left: 302, on right: 264
continue_statement (207)
    on left: 303, on right: 265
return_statement (208)
    on left: 304 305, on right: 266
goto_statement (209)
    on left: 306, on right: 267
named_label (210)
    on left: 307, on right: 271 306
null_statement (211)
    on left: 308, on right: 268
translation_unit (212)
    on left: 309 310, on right: 0 310
top_level_declaration (213)
    on left: 311 312, on right: 309 310
function_definition (214)
    on left: 313, on right: 312
function_def_specifier (215)
    on left: 314 315 316 317, on right: 313
declaration_list (216)
    on left: 318 319, on right: 316 319
function_declarator (217)
    on left: 320 321 322, on right: 34
parameter_type_list (218)
    on left: 323 324, on right: 162 163 320
parameter_list (219)
    on left: 325 326, on right: 323 324 326
parameter_declaration (220)
    on left: 327 328 329, on right: 325 326
identifier_list (221)
    on left: 330 331, on right: 322 331


state 0

    0 $accept: . translation_unit $end

    IDENT         shift, and go to state 1
    AUTO          shift, and go to state 2
    CHAR          shift, and go to state 3
    CONST         shift, and go to state 4
    DOUBLE        shift, and go to state 5
    ENUM          shift, and go to state 6
    EXTERN        shift, and go to state 7
    FLOAT         shift, and go to state 8
    INLINE        shift, and go to state 9
    INT           shift, and go to state 10
    LONG          shift, and go to state 11
    REGISTER      shift, and go to state 12
    RESTRICT      shift, and go to state 13
    SHORT         shift, and go to state 14
    SIGNED        shift, and go to state 15
    STATIC        shift, and go to state 16
    STRUCT        shift, and go to state 17
    TYPEDEF       shift, and go to state 18
    TYPEDEF_NAME  shift, and go to state 19
    UNION         shift, and go to state 20
    UNSIGNED      shift, and go to state 21
    VOID          shift, and go to state 22
    VOLATILE      shift, and go to state 23
    _BOOL         shift, and go to state 24
    '('           shift, and go to state 25
    '*'           shift, and go to state 26

    declaration                  go to state 27
    declaration_specifiers       go to state 28
    function_specifier           go to state 29
    storage_class_specifier      go to state 30
    type_specifier               go to state 31
    type_qualifier               go to state 32
    declarator                   go to state 33
    direct_declarator            go to state 34
    simple_declarator            go to state 35
    pointer_declarator           go to state 36
    array_declarator             go to state 37
    integer_type_specifier       go to state 38
    signed_type_specifier        go to state 39
    unsigned_type_specifier      go to state 40
    character_type_specifier     go to state 41
    floating_point_specifier     go to state 42
    complex_type_specifier       go to state 43
    bool_type_specifier          go to state 44
    enumeration_type_specifier   go to state 45
    enumeration_type_definition  go to state 46
    enumeration_type_reference   go to state 47
    structure_type_specifier     go to state 48
    structure_type_definition    go to state 49
    structure_type_reference     go to state 50
    union_type_specifier         go to state 51
    union_type_definition        go to state 52
    union_type_reference         go to state 53
    void_type_specifier          go to state 54
    typedef_name                 go to state 55
    pointer                      go to state 56
    translation_unit             go to state 57
    top_level_declaration        go to state 58
    function_definition          go to state 59
    function_def_specifier       go to state 60
    function_declarator          go to state 61


state 1

   36 simple_declarator: IDENT .

    $default  reduce using rule 36 (simple_declarator)


state 2

   15 storage_class_specifier: AUTO .

    $default  reduce using rule 15 (storage_class_specifier)


state 3

   93 character_type_specifier: CHAR .

    $default  reduce using rule 93 (character_type_specifier)


state 4

   27 type_qualifier: CONST .

    $default  reduce using rule 27 (type_qualifier)


state 5

   97 floating_point_specifier: DOUBLE .
  101 complex_type_specifier: DOUBLE . _COMPLEX

    _COMPLEX  shift, and go to state 62

    $default  reduce using rule 97 (floating_point_specifier)


state 6

  106 enumeration_type_definition: ENUM . '{' enumeration_definition_list '}'
  107                            | ENUM . enumeration_tag '{' enumeration_definition_list '}'
  108                            | ENUM . '{' enumeration_definition_list ',' '}'
  109                            | ENUM . enumeration_tag '{' enumeration_definition_list ',' '}'
  110 enumeration_type_reference: ENUM . enumeration_tag

    IDENT  shift, and go to state 63
    '{'    shift, and go to state 64

    enumeration_tag  go to state 65


state 7

   16 storage_class_specifier: EXTERN .

    $default  reduce using rule 16 (storage_class_specifier)


state 8

   96 floating_point_specifier: FLOAT .
  100 complex_type_specifier: FLOAT . _COMPLEX

    _COMPLEX  shift, and go to state 66

    $default  reduce using rule 96 (floating_point_specifier)


state 9

   10 function_specifier: INLINE .

    $default  reduce using rule 10 (function_specifier)


state 10

   74 signed_type_specifier: INT .

    $default  reduce using rule 74 (signed_type_specifier)


state 11

   77 signed_type_specifier: LONG .
   78                      | LONG . INT
   81                      | LONG . LONG
   82                      | LONG . LONG INT
   98 floating_point_specifier: LONG . DOUBLE
  102 complex_type_specifier: LONG . DOUBLE _COMPLEX

    DOUBLE  shift, and go to state 67
    INT     shift, and go to state 68
    LONG    shift, and go to state 69

    DOUBLE    [reduce using rule 77 (signed_type_specifier)]
    INT       [reduce using rule 77 (signed_type_specifier)]
    LONG      [reduce using rule 77 (signed_type_specifier)]
    $default  reduce using rule 77 (signed_type_specifier)


state 12

   17 storage_class_specifier: REGISTER .

    $default  reduce using rule 17 (storage_class_specifier)


state 13

   29 type_qualifier: RESTRICT .

    $default  reduce using rule 29 (type_qualifier)


state 14

   70 signed_type_specifier: SHORT .
   71                      | SHORT . INT

    INT  shift, and go to state 70

    INT       [reduce using rule 70 (signed_type_specifier)]
    $default  reduce using rule 70 (signed_type_specifier)


state 15

   72 signed_type_specifier: SIGNED . SHORT
   73                      | SIGNED . SHORT INT
   75                      | SIGNED . INT
   76                      | SIGNED .
   79                      | SIGNED . LONG
   80                      | SIGNED . LONG INT
   83                      | SIGNED . LONG LONG
   84                      | SIGNED . LONG LONG INT
   94 character_type_specifier: SIGNED . CHAR

    CHAR   shift, and go to state 71
    INT    shift, and go to state 72
    LONG   shift, and go to state 73
    SHORT  shift, and go to state 74

    CHAR      [reduce using rule 76 (signed_type_specifier)]
    INT       [reduce using rule 76 (signed_type_specifier)]
    LONG      [reduce using rule 76 (signed_type_specifier)]
    SHORT     [reduce using rule 76 (signed_type_specifier)]
    $default  reduce using rule 76 (signed_type_specifier)


state 16

   18 storage_class_specifier: STATIC .

    $default  reduce using rule 18 (storage_class_specifier)


state 17

  119 structure_type_definition: STRUCT . '{' field_list '}'
  120                          | STRUCT . structure_tag '{' field_list '}'
  121 structure_type_reference: STRUCT . structure_tag

    IDENT  shift, and go to state 75
    '{'    shift, and go to state 76

    structure_tag  go to state 77


state 18

   19 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 19 (storage_class_specifier)


state 19

  141 typedef_name: TYPEDEF_NAME .

    $default  reduce using rule 141 (typedef_name)


state 20

  136 union_type_definition: UNION . '{' field_list '}'
  137                      | UNION . union_tag '{' field_list '}'
  138 union_type_reference: UNION . union_tag

    IDENT  shift, and go to state 78
    '{'    shift, and go to state 79

    union_tag  go to state 80


state 21

   85 unsigned_type_specifier: UNSIGNED . SHORT
   86                        | UNSIGNED . SHORT INT
   87                        | UNSIGNED .
   88                        | UNSIGNED . INT
   89                        | UNSIGNED . LONG
   90                        | UNSIGNED . LONG INT
   91                        | UNSIGNED . LONG LONG
   92                        | UNSIGNED . LONG LONG INT
   95 character_type_specifier: UNSIGNED . CHAR

    CHAR   shift, and go to state 81
    INT    shift, and go to state 82
    LONG   shift, and go to state 83
    SHORT  shift, and go to state 84

    CHAR      [reduce using rule 87 (unsigned_type_specifier)]
    INT       [reduce using rule 87 (unsigned_type_specifier)]
    LONG      [reduce using rule 87 (unsigned_type_specifier)]
    SHORT     [reduce using rule 87 (unsigned_type_specifier)]
    $default  reduce using rule 87 (unsigned_type_specifier)


state 22

  140 void_type_specifier: VOID .

    $default  reduce using rule 140 (void_type_specifier)


state 23

   28 type_qualifier: VOLATILE .

    $default  reduce using rule 28 (type_qualifier)


state 24

  103 bool_type_specifier: _BOOL .

    $default  reduce using rule 103 (bool_type_specifier)


state 25

   33 direct_declarator: '(' . declarator ')'

    IDENT  shift, and go to state 1
    '('    shift, and go to state 25
    '*'    shift, and go to state 26

    declarator           go to state 85
    direct_declarator    go to state 34
    simple_declarator    go to state 35
    pointer_declarator   go to state 36
    array_declarator     go to state 37
    pointer              go to state 56
    function_declarator  go to state 61


state 26

  147 pointer: '*' .
  148        | '*' . type_qualifier_list
  149        | '*' . type_qualifier_list pointer
  150        | '*' . pointer
